--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BYYOURSIDEAutismTherapyServices/743999698603430-speech-language-pathologist'>BY YOUR SIDE - Autism Therapy Services Speech Language Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BYYOURSIDEAutismTherapyServices/743999698603430-speech-language-pathologist'>BY YOUR SIDE - Autism Therapy Services Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Tinley Park, IL 60487, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ingenuityprep/jobs/4498103002'>Job Application for Speech and Language Pathologist - CCC or CFY (Immediate Opening) at Ingenuity Prep</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ingenuityprep/jobs/4498103002'>Job Application for Speech and Language Pathologist - CCC or CFY (Immediate Opening) at Ingenuity Prep</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://autismhomesupport.applytojob.com/apply/wRoARIcaax/SpeechLanguage-Pathologist-CCC-PartTime-Contractor'>Speech-Language Pathologist (CCC), Part-Time Contractor - Autism Home Support Services - Career Page</a></h5> 
 <p><span class="badge badge-light">Rockford Rockford</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qk9aVfwi&k=Job&j=oyh89fwQ&__jvst=Employee+Referral&__jvsd=sidjliwW&__jvsc=Twitter&bid=nSzzmMwD'>AccentCare, Inc.? Careers - Speech Language Pathologist PRN Humble TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -142,7 +142,7 @@
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999697680147-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999697680147-speech-language-pathologist-slp-'>HSMC Speech-Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -150,7 +150,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PhoenixHomeCare1/743999698191686-home-health-speech-therapist-prn-'>Phoenix Home Care Home Health Speech Therapist (PRN) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -170,7 +170,7 @@
 <p><span class="badge badge-light">Miami, FLUnited States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698094349-occupational-therapist-full-time-part-time'>Hearing and Speech Center of Florida OCCUPATIONAL THERAPIST-FULL TIME & PART TIME | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HearingAndSpeechCenterOfFlorida/743999698094349-occupational-therapist-full-time-part-time'>Hearing and Speech Center of Florida OCCUPATIONAL THERAPIST-FULL TIME & PART TIME | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -194,7 +194,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211064898/Highly-Specialist-Speech-and-Language-Therapist?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Highly Specialist Speech and Language Therapist | CV-Library.co.uk | 211064898</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211064898/Highly-Specialist-Speech-and-Language-Therapist?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Highly Specialist Speech and Language Therapist | CV-Library.co.uk | 211064898</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -215,11 +215,11 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oC1C4fw3'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/oC1C4fw3'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
+<h5><a href='https://jobs.jobvite.com/kidscare-home-health/job/osj63fwE'>KidsCare Home Health Careers - Bilingual Pediatric Speech and Language Therapist Assistant - SLPA</a></h5> 
 <p><span class="badge badge-light">Fort Worth, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -231,7 +231,7 @@ Language Pathologists to work Full-Time for our Skilled Nursing Facility in?...<
 <p><span class="badge badge-light">Woodstock, Virginia</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999697798727-speech-language-pathologist-central-management-office-fort-worth-'>Uplift Education Speech Language Pathologist: Central Management Office (Fort Worth) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999697798727-speech-language-pathologist-central-management-office-fort-worth-'>Uplift Education Speech Language Pathologist: Central Management Office (Fort Worth) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -266,7 +266,7 @@ Gadsden. Setting: SNF. Discipline: SLP-CFY. Status: Full Time?...</p>
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoAaVfwN&k=Job&j=otHRafwV&__jvst=Employee+Referral&__jvsd=sQ7rihws&__jvsc=Twitter&bid=nMxseMwg'> SoutheastHEALTH Careers - Speech Pathologist</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoAaVfwN&k=Job&j=otHRafwV&__jvst=Employee+Referral&__jvsd=sQ7rihws&__jvsc=Twitter&bid=nMxseMwg'> SoutheastHEALTH Careers - Speech Pathologist</a></h5> 
 <p><span class="badge badge-light">Cape Girardeau, Missouri</span></p>
 <p>Posted on:: 2019-10-19</p>
 <hr/>
@@ -381,7 +381,7 @@ Speech Language Pathologist (SLP) administers speech therapy to patients on?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/northwest-center/job/ozoibfwa'>Northwest Center Careers - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
